# lges-vs-catl-analysis

./: .env.example  .gitignore  README.md  pyproject.toml  pyrightconfig.json  requirements.txt  tmp_research_graph.py  tmp_research_nodes.py
data/raw/: findings.json
data/vectordb/: chroma.sqlite3
docs/: design.md  lges_vs_catl_report_20260407_145154.md  lges_vs_catl_report_20260407_145826.md  lges_vs_catl_report_20260407_150614.md  lges_vs_catl_report_20260407_155338.md  lges_vs_catl_report_20260407_165340.md  lges_vs_catl_report_20260407_165821.md  lges_vs_catl_report_20260407_170506.md  lges_vs_catl_report_20260407_171808.md  merge_strategy_task1_task2.md  report_pipeline_health_lges_vs_catl_report_20260407_145154.md  report_pipeline_health_lges_vs_catl_report_20260407_145826.md  report_pipeline_health_lges_vs_catl_report_20260407_150614.md  report_pipeline_health_lges_vs_catl_report_20260407_155338.md  report_pipeline_health_lges_vs_catl_report_20260407_161909.md  report_pipeline_health_lges_vs_catl_report_20260407_162539.md  report_pipeline_health_lges_vs_catl_report_20260407_165340.md  report_pipeline_health_lges_vs_catl_report_20260407_165821.md  report_pipeline_health_lges_vs_catl_report_20260407_170506.md  report_pipeline_health_lges_vs_catl_report_20260407_171808.md  task2_data_processing_guide.md  task2_troubleshooting_history.md  task2_workflow_execution_result.md  troubleshooting_pipeline_type_errors.md
scripts/: run_report_debug.py
src/: __init__.py  run.py
src/agents/: __init__.py  analysis_prompts.py  clean_agent.py  data_refine_graph.py  full_pipeline_graph.py  market_portfolio_agent.py  report_prompts.py  swot_classifier_agent.py
src/core/: __init__.py  config.py  env.py  llm.py  report_workflow.py
src/nodes/: __init__.py  analysis_nodes.py  bridge_nodes.py  data_processing_nodes.py  graph_analysis.py  research_nodes.py
src/report/: __init__.py  pdf_export.py  pipeline_health.py  reference_sources.py
src/state/: __init__.py  state.py
src/tools/: __init__.py  ingest.py  (+3 more)
tests/: __init__.py  test_analysis_nodes.py  test_end_to_end_pipeline.py  test_graph_analysis.py
(+6 files in other folders)
