[project]
name = "lges-vs-catl-analysis"
version = "0.1.0"
description = "AI agent workflow for comparative LGES vs CATL battery strategy analysis"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "langgraph>=0.6,<1.0",
    "openai>=1.0.0",
    "python-dotenv>=1.0.1",
    "langchain-openai>=0.1.0",
    "langchain-community>=0.2.0",
    "chromadb>=0.5.0",
    "tavily-python>=0.3.0",
    "tiktoken>=0.7.0",
    "FlagEmbedding==1.3.3",
    "protobuf==3.20.3",
    "torch>=2.1.0",
    "transformers>=4.41.0",
    "sentencepiece>=0.2.0",
]

[tool.uv]
package = false
