[project]
name = "lges-vs-catl-analysis"
version = "0.1.0"
description = "LGES vs CATL 비교 분석 — Research / Refine / Analysis / Report LangGraph 파이프라인"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "langgraph>=0.6,<1.0",
    "langchain-core>=0.3.0",
    "langchain-openai>=0.2.0",
    "openai>=1.0.0",
    "python-dotenv>=1.0.1",
    "langchain-community>=0.2.0",
    "chromadb>=0.5.0",
    "tavily-python>=0.3.0",
    "tiktoken>=0.7.0",
    "FlagEmbedding==1.3.3",
    "protobuf==3.20.3",
    "torch>=2.1.0",
    "transformers>=4.41.0",
    "sentencepiece>=0.2.0",
    "markdown>=3.5",
    "weasyprint>=62.0",
    "typing-extensions>=4.12.0",
]

[tool.uv]
package = false

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"
